--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -124,7 +124,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="statistics.html" class="nav-link">
+                    <a href="#" class="nav-link">
                         <i class="fa-solid fa-chart-bar"></i>
                         <span>Statistics</span>
                     </a>
@@ -144,7 +144,7 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="delays-tracker.html">
+                <a href="../delays-tracker.html">
                     <span class="icon">
                         <i class="fa-sharp fa-solid fa-home"></i>
                     </span>
@@ -160,7 +160,7 @@
                 </a>
             </li>
             <li>
-                <a href="statistics.html">
+                <a href="#">
                     <span class="icon">
                         <i class="fa-solid fa-chart-bar"></i>
                     </span>
@@ -223,7 +223,7 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="list-group">
-                <a href="ann.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-solid fa-bullhorn"></i> Our Networks</h5>
@@ -231,7 +231,7 @@
                     </div>
                 </a>
 
-                <a href="tsa.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-solid fa-train"></i> System Map</h5>
@@ -239,13 +239,13 @@
                     </div>
                 </a>
 
-                <!-- <a href="settings.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="settings.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-solid fa-gear"></i> Settings</h5>
                         </div>
                     </div>
-                </a> -->
+                </a>
 
                 <a href="" class="list-group-item list-group-item-action flex-column align-items-start"
                     id="dark-mode-toggle-desktop">
@@ -259,7 +259,7 @@
             <hr>
 
             <div style="text-align: center; color: gray; font-size: 14px; margin-top: 1em; margin-bottom: 2em;">
-                Version 3.0.10
+                Version 4.0.0-DEV
             </div>
     </section>
 
