--- a/delays-tracker/settings.html
+++ b/delays-tracker/settings.html
@@ -12,7 +12,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="manifest" href="../manifest-bz.json">
+    <link rel="manifest" href="../manifest-dt.json">
 
     <link rel="icon" href="../img/core-img/favicon.png">
     <meta name="theme-color" content="#007bff">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="css/style-buszy.css">
+    <link rel="stylesheet" href="css/style-tdt.css">
     <link rel="stylesheet" href="../css/style-breakpoints.css">
     <link rel="stylesheet" href="../css/dark-mode.css">
 
@@ -250,36 +250,6 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
 
         <div class="container">
-            <h2 class="text-center" style="padding-top: 1em;">Time Formats</h2>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <label for="time-format-12" class="label-set">
-                        <input class="form-check-input" type="radio" id="time-format-12" name="time-format"
-                            value="12-hour" checked>&nbsp;
-                        12-Hour Format (02:30 PM)
-                    </label><br>
-                    <label for="time-format-24" class="label-set">
-                        <input class="form-check-input" type="radio" id="time-format-24" name="time-format"
-                            value="24-hour">&nbsp;
-                        24-Hour Format (14:30)
-                    </label><br>
-                    <label for="time-format-mins" class="label-set">
-                        <input class="form-check-input" type="radio" id="time-format-mins" name="time-format"
-                            value="mins">&nbsp;
-                        Mins (5 mins)
-                    </label>
-                </li>
-
-            </ul>
-
-            <h2 class="text-center" style="padding-top: 1em;">Data</h2>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <button id="clear-cache-btn" class="btn btn-rfetch">Re-fetch data</button><br>
-                    <p class="fetch">Clear cached bus stop data to ensure you have the latest information.</p>
-                </li>
-            </ul>
-
             <h2 class="text-center" style="padding-top: 1em;">Install</h2>
             <ul class="list-group">
                 <ul class="list-group">
@@ -301,7 +271,7 @@
 
     <script src="js/mob-navtabs.js"></script>
 
-    <script src="buszy-subp.js"></script>
+    <script src="tdt-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
