--- a/buszy.html
+++ b/buszy.html
@@ -12,7 +12,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest-bz.json">
     <meta name="theme-color" content="#007bff">
 
     <link rel="icon" href="img/core-img/favicon.png">
