--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -12,6 +12,9 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
+    <link rel="manifest" href="manifest-dt.json">
+    <meta name="theme-color" content="#007bff">
+
     <link rel="icon" href="img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
@@ -191,7 +194,7 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../main.html" class="nav-link active">
+                    <a href="delays-tracker.html" class="nav-link active">
                         <i class="fa-sharp fa-solid fa-home"></i>
                         <span>Home</span>
                     </a>
@@ -231,7 +234,7 @@
                 </a>
             </li>
             <li>
-                <a href="history.html">
+                <a href="delays-tracker/history.html">
                     <span class="icon">
                         <i class="fa-solid fa-clock-rotate-left"></i>
                     </span>
@@ -239,7 +242,7 @@
                 </a>
             </li>
             <li>
-                <a href="statistics.html">
+                <a href="#">
                     <span class="icon">
                         <i class="fa-solid fa-chart-bar"></i>
                     </span>
@@ -247,7 +250,7 @@
                 </a>
             </li>
             <li>
-                <a href="menu.html">
+                <a href="delays-tracker/menu.html">
                     <span class="icon">
                         <i class="fa-solid fa-bars"></i>
                     </span>
