--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="manifest-dt.json">
     <meta name="theme-color" content="#007bff">
 
-    <link rel="icon" href="img/core-img/favicon.png">
+    <link rel="icon" href="delays-tracker/assets/icon-512.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
@@ -169,27 +169,11 @@
 </style>
 
 <body>
-    <!-- Fixed Breadcrumb at very top (mobile/tablet only) -->
-    <!-- <div class="breadcrumb-fixed-placeholder">
-        <nav aria-label="breadcrumb" style="margin-bottom:0;">
-            <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
-                <li class="breadcrumb-item">
-                    <a href="nbs.html"><i class="fa-solid fa-home"></i>
-                    </a>
-                </li>
-                <li class="breadcrumb-item">
-                    <a href="abs.html"><i class="fa-solid fa-bars"></i>
-                    </a>
-                </li>
-            </ol>
-        </nav>
-    </div> -->
-
     <!-- Navigation Bar -->
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="delays-tracker.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="delays-tracker.html"><img src="delays-tracker/assets/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
@@ -263,46 +247,6 @@
 
 
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
-
-    <!-- Title/Breadcrumbs -->
-    <!-- <section class="about-me-sum clearfix">
-        <div class="wbnrfz_eicw">
-            <div class="page-header-section">
-                <div class="container container-xxl container-mobile container-mobile-header">
-                    <div class="breadcrumb-wrapper">
-                        <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item">
-                                    <a href="nbs.html"><i class="fa-solid fa-location-dot"></i>
-                                    </a>
-                                </li>
-                                <li class="breadcrumb-item">
-                                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
-                                    </a>
-                                </li>
-                            </ol>
-                        </nav>
-                        <div class="page-title-wrapper">
-                            <div
-                                style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-                                <div>
-                                    <h1 class="page-title" id="filter-title">Train Delays Tracker</h1>
-                                </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px; display: none;">
-                                    <i class="fa-solid fa-search"
-                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
-                                    <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search Bus Stop Code" style="padding-left: 35px; width: 100%;">
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-            </div>
-        </div>
-    </section> -->
 
     <section class="tsu">
         <div class="container container-xxl container-mobile container-mobile-header">
