--- a/delays-tracker/history.html
+++ b/delays-tracker/history.html
@@ -12,7 +12,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="assets/icon-512.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
@@ -403,6 +403,32 @@
         /* .tsu {
             padding: 3em 1em 7em 1em;
         } */
+
+        span#month-label {
+            font-weight: bold;
+            font-size: 1.2em;
+            margin: 0 15px;
+            padding-top: 7px;
+            padding-bottom: 7px;
+            padding-left: 5px;
+            padding-right: 5px;
+            border-radius: 12px;
+        }
+
+        #prev-month,
+        #next-month {
+            background-color: #de652e;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+            color: #fff;
+            border-radius: 60px;
+        }
+
+    }
+
+    @media (max-width: 450px) {
+        .btn {
+            width: 48px;
+        }
     }
 </style>
 
@@ -427,7 +453,7 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="delays-tracker.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="../delays-tracker.html"><img src="assets/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
@@ -444,7 +470,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="statistics.html" class="nav-link">
+                    <a href="#" class="nav-link">
                         <i class="fa-solid fa-chart-bar"></i>
                         <span>Statistics</span>
                     </a>
@@ -480,7 +506,7 @@
                 </a>
             </li>
             <li>
-                <a href="statistics.html">
+                <a href="#">
                     <span class="icon">
                         <i class="fa-solid fa-chart-bar"></i>
                     </span>
