--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -12,7 +12,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="assets/icon-512.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
@@ -107,7 +107,7 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="delays-tracker.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="../delays-tracker.html"><img src="assets/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
