--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <img src="https://i.imgur.com/Dlkjslp.png" alt="Work 3">
                         <div class="card-content">
                             <h3>Train Delays Tracker</h3>
-                            <a href="https://nurafianzulkifli.github.io/train-delays-checker/" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="https://nurafianzulkifli.github.io/nrfz-dev/delays-tracker.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="card">
