--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -119,12 +119,12 @@
                 </li>
                 <li class="nav-item">
                     <a href="history.html" class="nav-link">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fa-solid fa-clock-rotate-left"></i>
                         <span>History</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="statistics.html" class="nav-link">
                         <i class="fa-solid fa-chart-bar"></i>
                         <span>Statistics</span>
                     </a>
