--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -185,7 +185,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="delays-tracker/history.html" class="nav-link">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fa-solid fa-clock-rotate-left"></i>
                         <span>History</span>
                     </a>
                 </li>
