--- a/delays-tracker/settings.html
+++ b/delays-tracker/settings.html
@@ -115,7 +115,7 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="../buszy.html">
+                    <a href="../delays-tracker.html">
                         <i class="fa-solid fa-house"></i>
                     </a>
                 </li>
@@ -136,34 +136,29 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../buszy.html" class="nav-link">
-                        <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                        <span>Pinned</span>
+                    <a href="../main.html" class="nav-link">
+                        <i class="fa-sharp fa-solid fa-home"></i>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="nbs.html" class="nav-link">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <span>Nearby</span>
+                    <a href="history.html" class="nav-link">
+                        <i class="fa-solid fa-clock-rotate-left"></i>
+                        <span>History</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="abs.html" class="nav-link">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <span>Search</span>
+                    <a href="statistics.html" class="nav-link">
+                        <i class="fa-solid fa-chart-bar"></i>
+                        <span>Statistics</span>
                     </a>
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item">
                     <a href="menu.html" class="nav-link active">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
                     </a>
                 </li>
-                <!-- <li class="nav-item-toggle">
-                    <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-                        <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
-                    </a>
-                </li> -->
             </ul>
         </div>
 
@@ -173,27 +168,27 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="../buszy.html">
+                <a href="../delays-tracker.html">
                     <span class="icon">
-                        <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                        <i class="fa-sharp fa-solid fa-home"></i>
                     </span>
-                    <span class="label">Pinned</span>
+                    <span class="label">Home</span>
                 </a>
             </li>
             <li>
-                <a href="nbs.html">
+                <a href="history.html">
                     <span class="icon">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fa-solid fa-clock-rotate-left"></i>
                     </span>
-                    <span class="label">Nearby</span>
+                    <span class="label">History</span>
                 </a>
             </li>
             <li>
-                <a href="abs.html">
+                <a href="#">
                     <span class="icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-chart-bar"></i>
                     </span>
-                    <span class="label">Search</span>
+                    <span class="label">Statistics</span>
                 </a>
             </li>
             <li class="active">
