--- a/delays-tracker/history.html
+++ b/delays-tracker/history.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Train Service Updates | Buszy</title>
+    <title>Train Service Updates | Train Delays Tracker</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -185,20 +185,20 @@
     }
 
     .status.resolved {
-        color: #48db86;
+        color: #124929;
         margin-left: auto;
         font-weight: bold;
-        background-color: #132e1e;
-        border: 1px solid #27ae60;
+        background-color: #c4f5d7;
+        border: 1px solid #2ca05d;
         border-radius: 25px;
         padding: 4px 12px;
     }
 
     .status.ongoing {
-        color: #f89b49;
+        color: rgb(136, 79, 14);
         margin-left: auto;
         font-weight: bold;
-        background-color: #6b3c12;
+        background-color: #f5c499;
         border: 1px solid #e67e22;
         border-radius: 25px;
         padding: 4px 12px;
@@ -416,6 +416,26 @@
 
     body.dark-mode .card-time {
         color: #fff;
+    }
+
+    body.dark-mode .status.resolved {
+        color: #48db86;
+        margin-left: auto;
+        font-weight: bold;
+        background-color: #132e1e;
+        border: 1px solid #27ae60;
+        border-radius: 25px;
+        padding: 4px 12px;
+    }
+
+    body.dark-mode .status.ongoing {
+        color: #f89b49;
+        margin-left: auto;
+        font-weight: bold;
+        background-color: #6b3c12;
+        border: 1px solid #e67e22;
+        border-radius: 25px;
+        padding: 4px 12px;
     }
 
 
