--- a/delays-tracker/statistics.html
+++ b/delays-tracker/statistics.html
@@ -241,14 +241,14 @@
             <hr>
 
             <div class="stats-section">
-                <h2 style="margin-top:50px;">Mean Distance Travelled between Delays &gt; 5 min (train-km)
+                <h2 style="margin-top:50px;">Mean Distance Travelled between Delays &gt; 5 min (train-km - MRT)
                 </h2>
                 <div id="mkbf-line-chart-mrt"></div>
             </div>
 
             <div class="stats-section">
-                <h2 style="margin-top:50px;">Mean Distance Travelled between Delays &gt; 5 min (car-km)<br>LRT Lines -
-                    12 Month Moving Average (MMA)</h2>
+                <h2 style="margin-top:50px;">Mean Distance Travelled between Delays &gt; 5 min (car-km - LRT)
+                </h2>
                 <div id="mkbf-line-chart-lrt"></div>
             </div>
 
