--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -38,6 +38,11 @@
 </head>
 
 <style>
+    .container-mobile-header {
+        padding-right: 1em !important;
+        padding-left: 1em !important;
+    }
+
     .custom-list-item {
         display: flex;
         align-items: center;
@@ -158,7 +163,7 @@
     }
 
     .tsu {
-        padding: 7em 1em 7em 1em;
+        padding: 7em 1em 3em 1em;
     }
 
     @media (max-width: 994px) {
