--- a/delays-tracker/history.html
+++ b/delays-tracker/history.html
@@ -384,12 +384,12 @@
         color: #000;
         margin-top: 1.5em;
         text-align: center;
-        background: #fff;
-    color: #000;
-    border-radius: 25px;
-    padding: 10px;
-    box-shadow: 0 2px 8px #0002;
-    transition-duration: 800ms;
+        background-color: #fff;
+        color: #000;
+        border-radius: 25px;
+        padding: 10px;
+        box-shadow: 0 2px 8px #0002;
+        transition-duration: 800ms;
     }
 
     @keyframes pulse-animation {
@@ -451,7 +451,10 @@
     }
 
     body.dark-mode p.no-incidents-reported {
+        background-color: #2e2e2e;
         color: #fff;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
 
@@ -460,10 +463,6 @@
     } */
 
     @media (max-width: 994px) {
-        /* .tsu {
-            padding: 3em 1em 7em 1em;
-        } */
-
         span#month-label {
             font-weight: bold;
             font-size: 1.2em;
