--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -231,7 +231,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="delays-tracker.html/statistics.html">
                     <span class="icon">
                         <i class="fa-solid fa-chart-bar"></i>
                     </span>
