--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -112,7 +112,7 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../main.html" class="nav-link">
+                    <a href="../delays-tracker.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-home"></i>
                         <span>Home</span>
                     </a>
@@ -231,7 +231,7 @@
                     </div>
                 </a>
 
-                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="system-map.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-solid fa-train"></i> System Map</h5>
