--- a/delays-tracker/system-map.html
+++ b/delays-tracker/system-map.html
@@ -32,63 +32,149 @@
     </script>
 
     <style>
+        .pdf-section {
+            padding: 2em 0;
+            background: #ececea;
+        }
+
+        body.dark-mode .pdf-section {
+            background: #1a1a1a;
+        }
+
         .pdf-container {
-            width: 100vw;
-            max-width: 100vw;
-            height: 100vh;
-            max-height: 100vh;
+            width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
-            background: #18191a;
+            gap: 1em;
         }
 
-        .pdf-embed {
-            width: 100vw;
-            max-width: 100vw;
-            height: 100vh;
-            max-height: 100vh;
+        .pdf-controls {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            padding: 1em;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            font-family: 'Onest', sans-serif;
+        }
+
+        body.dark-mode .pdf-controls {
+            background: #2e2e2e;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+        }
+
+        .pdf-controls button,
+        .pdf-controls a {
+            padding: 0.6em 1.2em;
             border: none;
-            background: #18191a;
+            border-radius: 6px;
+            font-size: 0.95em;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Onest', sans-serif;
+            text-decoration: none;
+            display: inline-block;
+            background: #0055b8;
+            color: #fff;
         }
 
-        @media (max-width: 600px) {
+        .pdf-controls button:hover,
+        .pdf-controls a:hover {
+            background: #003d82;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0,85,184,0.3);
+        }
 
-            .pdf-container,
-            .pdf-embed {
-                height: 90vh;
-                min-height: 320px;
-            }
+        .pdf-controls button:active {
+            transform: translateY(0);
+        }
+
+        .pdf-controls .zoom-info {
+            padding: 0.6em 1.2em;
+            background: #f0f0f0;
+            border-radius: 6px;
+            font-weight: 600;
+            min-width: 100px;
+            text-align: center;
+            color: #222;
+        }
+
+        body.dark-mode .pdf-controls .zoom-info {
+            background: #444;
+            color: #fff;
+        }
+
+        #pdf-viewer {
+            width: 100%;
+            max-width: 900px;
+            min-height: 400px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #ececea;
+            overflow: auto;
+        }
+
+        #pdf-viewer canvas {
+            width: auto;
+            height: auto;
+            max-width: 100%;
+            max-height: 80vh;
+            display: block;
+            margin: auto;
         }
 
         .pdf-link {
-            position: relative;
-            z-index: 1;
-            min-width: 50px;
-            height: 46px;
-            line-height: 46px;
-            font-size: 14px;
-            font-weight: 500;
-            display: inline-block;
-            padding: 0 30px;
             text-align: center;
-            text-transform: capitalize;
-            background-color: #ec451b;
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
-            color: #fff;
-            border-radius: 60px;
-            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-            border: none;
-            margin-left: 1em;
-            margin-top: 2em;
+            font-size: 0.95em;
+            color: #0055b8;
+            text-decoration: none;
+            transition: color 0.3s ease;
         }
 
         .pdf-link:hover {
-            font-weight: 500;
-            background-color: #6d99c0 !important;
-            color: #fff;
-            transform: translateY(-2px);
+            color: #003d82;
+            text-decoration: underline;
+        }
+
+        body.dark-mode .pdf-link {
+            color: #64a3ff;
+        }
+
+        body.dark-mode .pdf-link:hover {
+            color: #96c0ff;
+        }
+
+        @media (max-width: 600px) {
+            .pdf-controls {
+                gap: 6px;
+                padding: 0.8em;
+            }
+
+            .pdf-controls button,
+            .pdf-controls a {
+                padding: 0.5em 0.8em;
+                font-size: 0.85em;
+            }
+
+            .pdf-controls .zoom-info {
+                font-size: 0.85em;
+                padding: 0.5em 0.8em;
+                min-width: 80px;
+            }
+
+            #pdf-viewer {
+                min-height: 300px;
+            }
+
+            #pdf-viewer canvas {
+                max-height: 60vh;
+            }
         }
     </style>
 </head>
@@ -227,14 +313,20 @@
     </section>
 
     <!-- Section Contents -->
-    <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
-        <div class="pdf-container">
-            <iframe class="pdf-embed"
-                src="https://docs.google.com/gview?url=https://www.lta.gov.sg/content/dam/ltagov/getting_around/public_transport/rail_network/pdf/SM_20250704_BI.pdf&embedded=true"
-                allowfullscreen></iframe>
-            <a class="pdf-link"
-                href="https://www.lta.gov.sg/content/dam/ltagov/getting_around/public_transport/rail_network/pdf/SM_20250704_BI.pdf"
-                target="_blank" rel="noopener">Open PDF in new tab</a>
+    <section class="pdf-section">
+        <div class="container container-xxl container-mobile container-mobile-header">
+            <div class="pdf-container">
+                <div class="pdf-controls">
+                    <button id="zoom-out" title="Zoom Out"><i class="fa-solid fa-magnifying-glass-minus"></i> Zoom Out</button>
+                    <div class="zoom-info"><span id="zoom-level">120%</span></div>
+                    <button id="zoom-in" title="Zoom In"><i class="fa-solid fa-magnifying-glass-plus"></i> Zoom In</button>
+                    <button id="fit-width" title="Fit to Width"><i class="fa-solid fa-arrows-alt-h"></i> Fit Width</button>
+                    <button id="fit-page" title="Fit to Page"><i class="fa-solid fa-maximize"></i> Fit Page</button>
+                    <a id="save-pdf" href="assets/SM_20250704_BI.pdf" download title="Download PDF"><i class="fa-solid fa-download"></i> Download</a>
+                </div>
+                <div id="pdf-viewer">Loading PDF...</div>
+                <a class="pdf-link" href="assets/SM_20250704_BI.pdf" target="_blank" rel="noopener"><i class="fa-solid fa-external-link"></i> Open PDF in New Tab</a>
+            </div>
         </div>
     </section>
 
@@ -266,23 +358,8 @@
     <script src="js/menu.js"></script>
 
 
+    <script type="module" src="js/pdfjs/pdfjs-loader.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class="pdf-container">
-    <iframe class="pdf-embed" src="https://docs.google.com/gview?url=https://www.lta.gov.sg/content/dam/ltagov/getting_around/public_transport/rail_network/pdf/SM_20250704_BI.pdf&embedded=true" allowfullscreen></iframe>
-    <a class="pdf-link" href="https://www.lta.gov.sg/content/dam/ltagov/getting_around/public_transport/rail_network/pdf/SM_20250704_BI.pdf" target="_blank" rel="noopener">Open PDF in new tab</a>
-  </div> -->
 </body>
 
 </html>
