--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -92,11 +92,11 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="nbs.html"><i class="fa-solid fa-home"></i>
+                    <a href="../delays-tracker.html"><i class="fa-solid fa-home"></i>
                     </a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="abs.html"><i class="fa-solid fa-bars"></i>
+                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
                     </a>
                 </li>
             </ol>
@@ -160,7 +160,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="statistics.html">
                     <span class="icon">
                         <i class="fa-solid fa-chart-bar"></i>
                     </span>
@@ -192,7 +192,7 @@
                         <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="../buszy.html">
+                                    <a href="../delays-tracker.html">
                                         <i class="fa-solid fa-house"></i>
                                     </a>
                                 </li>
