--- a/delays-tracker/system-map.html
+++ b/delays-tracker/system-map.html
@@ -42,7 +42,7 @@
         }
 
         .pdf-container {
-            width: 100%;
+            width: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -57,21 +57,21 @@
             align-items: center;
             padding: 1em;
             background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            border-radius: 24px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             font-family: 'Onest', sans-serif;
         }
 
         body.dark-mode .pdf-controls {
             background: #2e2e2e;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
         }
 
         .pdf-controls button,
         .pdf-controls a {
             padding: 0.6em 1.2em;
             border: none;
-            border-radius: 6px;
+            border-radius: 24px;
             font-size: 0.95em;
             font-weight: 600;
             cursor: pointer;
@@ -79,15 +79,16 @@
             font-family: 'Onest', sans-serif;
             text-decoration: none;
             display: inline-block;
-            background: #0055b8;
+            background: #2688a5;
             color: #fff;
         }
 
         .pdf-controls button:hover,
         .pdf-controls a:hover {
-            background: #003d82;
+            background: #cce6fb;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,85,184,0.3);
+            box-shadow: 0 4px 12px rgba(0, 85, 184, 0.3);
+            color: #000;
         }
 
         .pdf-controls button:active {
@@ -111,35 +112,48 @@
 
         #pdf-viewer {
             width: 100%;
-            max-width: 900px;
-            min-height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: #ececea;
+            height: 731px;
+            display: block;
+            /* background: #fff; */
             overflow: auto;
+            border-radius: 8px;
+            /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
+            text-align: center;
         }
 
         #pdf-viewer canvas {
             width: auto;
             height: auto;
-            max-width: 100%;
-            max-height: 80vh;
             display: block;
-            margin: auto;
+            margin: 0 auto;
         }
 
         .pdf-link {
+            position: relative;
+            z-index: 1;
+            min-width: 50px;
+            height: 46px;
+            line-height: 46px;
+            font-size: 14px;
+            font-weight: 500;
+            display: inline-block;
+            padding: 0 30px;
             text-align: center;
-            font-size: 0.95em;
-            color: #0055b8;
-            text-decoration: none;
-            transition: color 0.3s ease;
+            text-transform: capitalize;
+            background-color: #ec451b;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+            color: #fff;
+            border-radius: 60px;
+            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            border: none;
+            margin-left: 1em;
         }
 
         .pdf-link:hover {
-            color: #003d82;
-            text-decoration: underline;
+            font-weight: 500;
+            background-color: #6d99c0 !important;
+            color: #fff;
+            transform: translateY(-2px);
         }
 
         body.dark-mode .pdf-link {
@@ -299,7 +313,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Menu</h1>
+                                    <h1 class="page-title" id="filter-title">System Map</h1>
                                 </div>
                             </div>
                         </div>
@@ -317,15 +331,17 @@
         <div class="container container-xxl container-mobile container-mobile-header">
             <div class="pdf-container">
                 <div class="pdf-controls">
-                    <button id="zoom-out" title="Zoom Out"><i class="fa-solid fa-magnifying-glass-minus"></i> Zoom Out</button>
-                    <div class="zoom-info"><span id="zoom-level">120%</span></div>
-                    <button id="zoom-in" title="Zoom In"><i class="fa-solid fa-magnifying-glass-plus"></i> Zoom In</button>
-                    <button id="fit-width" title="Fit to Width"><i class="fa-solid fa-arrows-alt-h"></i> Fit Width</button>
-                    <button id="fit-page" title="Fit to Page"><i class="fa-solid fa-maximize"></i> Fit Page</button>
-                    <a id="save-pdf" href="assets/SM_20250704_BI.pdf" download title="Download PDF"><i class="fa-solid fa-download"></i> Download</a>
+                    <button id="zoom-out" title="Zoom Out"><i class="fa-solid fa-magnifying-glass-minus"></i></button>
+                    <div class="zoom-info"><span id="zoom-level">100%</span></div>
+                    <button id="zoom-in" title="Zoom In"><i class="fa-solid fa-magnifying-glass-plus"></i></button>
+                    <button id="fit-width" title="Fit to Width"><i class="fa-solid fa-arrows-alt-h"></i> </button>
+                    <button id="fit-page" title="Fit to Page"><i class="fa-solid fa-maximize"></i></button>
+                    <a id="save-pdf" href="assets/system-map-lta.pdf" download title="Download PDF"><i
+                            class="fa-solid fa-download"></i></a>
                 </div>
                 <div id="pdf-viewer">Loading PDF...</div>
-                <a class="pdf-link" href="assets/SM_20250704_BI.pdf" target="_blank" rel="noopener"><i class="fa-solid fa-external-link"></i> Open PDF in New Tab</a>
+                <a class="pdf-link" href="assets/system-map-lta.pdf" target="_blank" rel="noopener"><i
+                        class="fa-solid fa-external-link"></i> Open PDF in New Tab</a>
             </div>
         </div>
     </section>
