--- a/delays-tracker/system-map.html
+++ b/delays-tracker/system-map.html
@@ -157,11 +157,11 @@
         }
 
         body.dark-mode .pdf-link {
-            color: #64a3ff;
+            color: #fff;
         }
 
         body.dark-mode .pdf-link:hover {
-            color: #96c0ff;
+            color: #fff;
         }
 
         @media (max-width: 600px) {
