--- a/delays-tracker/system-map.html
+++ b/delays-tracker/system-map.html
@@ -183,11 +183,11 @@
             }
 
             #pdf-viewer {
-                min-height: 300px;
+                height: 500px;
             }
 
             #pdf-viewer canvas {
-                max-height: 60vh;
+                max-height: auto;
             }
         }
     </style>
