--- a/delays-tracker/system-map.html
+++ b/delays-tracker/system-map.html
@@ -34,6 +34,7 @@
     <style>
         .pdf-section {
             padding: 2em 0;
+            padding-bottom: 7em;
             background: #ececea;
         }
 
