--- a/delays-tracker/system-map.html
+++ b/delays-tracker/system-map.html
@@ -32,165 +32,7 @@
     </script>
 
     <style>
-        .pdf-section {
-            padding: 2em 0;
-            padding-bottom: 3em;
-            background: #ececea;
-        }
 
-        body.dark-mode .pdf-section {
-            background: #1a1a1a;
-        }
-
-        .pdf-container {
-            width: auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1em;
-        }
-
-        .pdf-controls {
-            display: flex;
-            gap: 8px;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            padding: 1em;
-            background: #fff;
-            border-radius: 24px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            font-family: 'Onest', sans-serif;
-        }
-
-        body.dark-mode .pdf-controls {
-            background: #2e2e2e;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-        }
-
-        .pdf-controls button,
-        .pdf-controls a {
-            padding: 0.6em 1.2em;
-            border: none;
-            border-radius: 24px;
-            font-size: 0.95em;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-family: 'Onest', sans-serif;
-            text-decoration: none;
-            display: inline-block;
-            background: #2688a5;
-            color: #fff;
-        }
-
-        .pdf-controls button:hover,
-        .pdf-controls a:hover {
-            background: #cce6fb;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 85, 184, 0.3);
-            color: #000;
-        }
-
-        .pdf-controls button:active {
-            transform: translateY(0);
-        }
-
-        .pdf-controls .zoom-info {
-            padding: 0.6em 1.2em;
-            background: #f0f0f0;
-            border-radius: 6px;
-            font-weight: 600;
-            min-width: 100px;
-            text-align: center;
-            color: #222;
-        }
-
-        body.dark-mode .pdf-controls .zoom-info {
-            background: #444;
-            color: #fff;
-        }
-
-        #pdf-viewer {
-            width: 100%;
-            height: 731px;
-            display: block;
-            /* background: #fff; */
-            overflow: auto;
-            border-radius: 8px;
-            /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
-            text-align: center;
-        }
-
-        #pdf-viewer canvas {
-            width: auto;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-
-        .pdf-link {
-            position: relative;
-            z-index: 1;
-            min-width: 50px;
-            height: 46px;
-            line-height: 46px;
-            font-size: 14px;
-            font-weight: 500;
-            display: inline-block;
-            padding: 0 30px;
-            text-align: center;
-            text-transform: capitalize;
-            background-color: #ec451b;
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
-            color: #fff;
-            border-radius: 60px;
-            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-            border: none;
-            margin-left: 1em;
-        }
-
-        .pdf-link:hover {
-            font-weight: 500;
-            background-color: #6d99c0 !important;
-            color: #fff;
-            transform: translateY(-2px);
-        }
-
-        body.dark-mode .pdf-link {
-            color: #fff;
-        }
-
-        body.dark-mode .pdf-link:hover {
-            color: #fff;
-        }
-
-        @media (max-width: 600px) {
-            .pdf-controls {
-                gap: 3px;
-                padding: 0.8em;
-            }
-
-            .pdf-controls button,
-            .pdf-controls a {
-                padding: 0.5em 0.8em;
-                font-size: 0.85em;
-            }
-
-            .pdf-controls .zoom-info {
-                font-size: 0.85em;
-                padding: 0.5em 0.8em;
-                min-width: 80px;
-            }
-
-            #pdf-viewer {
-                height: 500px;
-            }
-
-            #pdf-viewer canvas {
-                max-height: auto;
-            }
-        }
     </style>
 </head>
 
@@ -330,16 +172,13 @@
     <!-- Section Contents -->
     <section class="pdf-section">
         <div class="container container-xxl container-mobile container-mobile-header">
-            <div class="pdf-container">
-                <div class="pdf-controls">
-                    <button id="zoom-out" title="Zoom Out"><i class="fa-solid fa-magnifying-glass-minus"></i></button>
-                    <div class="zoom-info"><span id="zoom-level">100%</span></div>
-                    <button id="zoom-in" title="Zoom In"><i class="fa-solid fa-magnifying-glass-plus"></i></button>
-                    <button id="fit-width" title="Fit to Width"><i class="fa-solid fa-arrows-alt-h"></i> </button>
-                    <button id="fit-page" title="Fit to Page"><i class="fa-solid fa-maximize"></i></button>
-                    <a id="external" title="Open PDF in New Tab" href="assets/system-map-lta.pdf" target="_blank" rel="noopener"><i class="fa-solid fa-external-link"></i></a>
-                </div>
-                <div id="pdf-viewer">Loading PDF...</div>
+            <div class="fr-view">
+                <p><a href="assets/system-map-lta.pdf" rel="noopener noreferrer" data-uw-rm-brl="PR"
+                        data-uw-original-href="/cmsctx/pm/67d5756d-b426-4a9d-8100-b1556b0919ae/culture/en-US/wg/cdfe6cd3-957c-414e-bad6-5c72b93cf4c3/readonly/0/ea/1/h/c8cb91ce325df4dce2edfce086cbaf30548c56918c58fd047f183645f28ca78a/-/getmedia/ebd63ffc-a4fd-48d9-8c00-6b43fa120a2b/MRT-Map.png?uh=d88f3301020b6b4f35d9edcfc97181e82a4f13885d9e42d221c111b7a5b91d82"
+                        aria-label="Type something - open in a new tab" data-uw-rm-ext-link="" target="_blank"><img
+                            data-light="assets/system-map-lta.png" data-dark="assets/system-map-lta-dark.png"
+                            data-light-alt="Light mode description" data-dark-alt="Dark mode description"
+                            alt="Default description"></a></p>
             </div>
         </div>
     </section>
@@ -351,6 +190,9 @@
         </script>
 
 
+
+    <!-- Dark mode image switching for map -->
+    <script src="js/sysMap.js"></script>
     <script src="tdt-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
@@ -371,8 +213,8 @@
 
     <script src="js/menu.js"></script>
 
+    <script src="js/sysMap.js"></script>
 
-    <script type="module" src="js/pdfjs/pdfjs-loader.js"></script>
 
 </body>
 
