--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -226,7 +226,7 @@
                 <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-menu"><i class="fa-solid fa-bullhorn"></i> Our Networks</h5>
+                            <h5 class="lg-menu"><i class="fa-solid fa-train"></i> Our Networks</h5>
                         </div>
                     </div>
                 </a>
@@ -234,7 +234,7 @@
                 <a href="system-map.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-menu"><i class="fa-solid fa-train"></i> System Map</h5>
+                            <h5 class="lg-menu"><i class="fa-solid fa-map"></i> System Map</h5>
                         </div>
                     </div>
                 </a>
