--- a/delays-tracker/system-map.html
+++ b/delays-tracker/system-map.html
@@ -32,7 +32,9 @@
     </script>
 
     <style>
-
+        .sys-map img {
+            border-radius: 25px;
+        }
     </style>
 </head>
 
@@ -172,13 +174,10 @@
     <!-- Section Contents -->
     <section class="pdf-section">
         <div class="container container-xxl container-mobile container-mobile-header">
-            <div class="fr-view">
-                <p><a href="assets/system-map-lta.pdf" rel="noopener noreferrer" data-uw-rm-brl="PR"
-                        data-uw-original-href="/cmsctx/pm/67d5756d-b426-4a9d-8100-b1556b0919ae/culture/en-US/wg/cdfe6cd3-957c-414e-bad6-5c72b93cf4c3/readonly/0/ea/1/h/c8cb91ce325df4dce2edfce086cbaf30548c56918c58fd047f183645f28ca78a/-/getmedia/ebd63ffc-a4fd-48d9-8c00-6b43fa120a2b/MRT-Map.png?uh=d88f3301020b6b4f35d9edcfc97181e82a4f13885d9e42d221c111b7a5b91d82"
-                        aria-label="Type something - open in a new tab" data-uw-rm-ext-link="" target="_blank"><img
+            <div class="sys-map">
+                <p><a href="assets/system-map-lta.pdf" target="_blank"><img
                             data-light="assets/system-map-lta.png" data-dark="assets/system-map-lta-dark.png"
-                            data-light-alt="Light mode description" data-dark-alt="Dark mode description"
-                            alt="Default description"></a></p>
+                            data-light-alt="Light mode" data-dark-alt="Dark mode"></a></p>
             </div>
         </div>
     </section>
